# ffmpeg_tools

./: .clang-format  .cz-config.js  .gitmodules  CMakeLists.txt  LICENSE  README.md  xmake.lua
src/: main.cpp
src/codec_info/: codec_info.h  decoders_info.cpp  decoders_info.h  encoders_info.cpp  encoders_info.h
